--- a/package.json
+++ b/package.json
@@ -75,18 +75,18 @@
         "@vitejs/plugin-basic-ssl": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
-        "body-parser": "^1.20.2",
+        "body-parser": "1.20.3",
         "cspell": "^8.3.2",
         "cssnano": "^7.0.6",
         "deepl-node": "^1.10.1",
         "dependency-cruiser": "^16.8.0",
         "esbuild-plugin-react-virtualized": "^1.0.4",
         "eslint": "=9.14.0",
-        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-prettier": "=9.1.2",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsdoc": "^50.6.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-prettier": ">=5.2.1",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-unicorn": "^49.0.0",
         "globals": "^15.8.0",
@@ -110,7 +110,7 @@
         "terser": "^5.37.0",
         "ts-jest": "^29.2.5",
         "typescript": "=5.7.3",
-        "vite": "^6.3.5",
+        "vite": "^6.3.6",
         "vite-bundle-visualizer": "^1.2.1",
         "vite-plugin-checker": "^0.8.0",
         "vite-plugin-node-polyfills": "^0.22.0",
@@ -158,7 +158,7 @@
         "react-virtualized": "^9.22.5",
         "redux": "^3.7.2",
         "sanitize-html": "^2.14.0",
-        "sweetalert2": "^11.4.17",
+        "sweetalert2": "11.22.4",
         "ts-md5": "^1.3.1",
         "valid-url": "^1.0.9",
         "whatwg-fetch": "^3.0.0"
